objects/DMAPP__DM_TAS_Criterion_Answer__c.object
<CustomObject>
    <description>NO CONFIGURATION SUPPORT 

This object is responsible for storing answers to the Assessment module specific to a given opportunity.</description>
    <fields>
        <fullName>DMAPP__Answer__c</fullName>
        <label>Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__DM_Opportunity_Extra__c</fullName>
        <label>DM Opportunity Extra</label>
        <referenceTo>DMAPP__DM_Opportunity_Extra__c</referenceTo>
        <relationshipName>DM_TAS_Criterion_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__DM_TAS_Criterion__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>DM TAS Criterion</label>
        <referenceTo>DMAPP__DM_TAS_Criterion__c</referenceTo>
        <relationshipName>DM_TAS_Criterion_Answers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Maximum_Score__c</fullName>
        <formula>Max(DMAPP__DM_TAS_Criterion__r.DMAPP__Yes_Score__c, DMAPP__DM_TAS_Criterion__r.DMAPP__No_Score__c,  0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maximum Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__NoteEntered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NoteEntered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Note__c</fullName>
        <label>Note</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__Score__c</fullName>
        <formula>IF(ISPICKVAL(DMAPP__Answer__c, &apos;Yes&apos;),
      DMAPP__DM_TAS_Criterion__r.DMAPP__Yes_Score__c, IF(ISPICKVAL(DMAPP__Answer__c, &apos;No&apos;),
      DMAPP__DM_TAS_Criterion__r.DMAPP__No_Score__c, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Assessment Criterion Answer</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Assessment Criterion Answer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assessment Criterion Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>